<resources>
    <string name="app_name">MathBet</string>
    <string name="user_name">Player</string>
    <string name="user_money">$100</string>
    <string name="btn_bet">Bet</string>
    <string name="btn_list">List</string>
    <string name="btn_options">Options</string>

    <string name="number">100</string>
    <string name="sign">+</string>
    <string name="ratio">1/15</string>
    <string name="time">30</string>
    <string name="hard">Hard</string>
    <string name="betratio">%0.8</string>
    <string name="labelratio">Ratio:</string>
    <string name="labeltime">Time:</string>
    <string name="labelhard">Level:</string>
    <string name="betmoney">I want to Risk:</string>
    <string name="percentage">%50</string>
    <string name="result">You Win!</string>
    <string name="yourmoney">Your Money:</string>
    <string name="username">Donald Krump</string>
    <string name="player">Player</string>
    <string name="titlesetting">UserName:</string>
    <string name="player_name_preference">player_name_preference</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


</resources>
